fix css textalign

--- a/frontend/src/containers/users/styles.css
+++ b/frontend/src/containers/users/styles.css
@@ -31,4 +31,5 @@
   margin: 25px 45px;
   width: 128px;
   font-size: 12px;
+  text-align: center;
 }
